safari overflow bug fix?

--- a/client/src/Components/navigation.css
+++ b/client/src/Components/navigation.css
@@ -58,6 +58,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 .navList li {
